# lab06---report

./: CMakeLists.txt  CPackConfig.cmake  README.md
.github/workflows/: build.yml
